--- a/analysis-multiple-imputation/diagnostics/explore-predictors-stratum-02.html
+++ b/analysis-multiple-imputation/diagnostics/explore-predictors-stratum-02.html
@@ -366,19 +366,12 @@ effect</a></li>
 EMA</a>
 <ul>
 <li><a href="#dependent-variable-y" id="toc-dependent-variable-y"><span class="toc-section-number">3.1</span> Dependent variable: Y</a></li>
-<li><a href="#dependent-variable-cigarette_counts" id="toc-dependent-variable-cigarette_counts"><span class="toc-section-number">3.2</span> Dependent variable:
-cigarette_counts</a></li>
-<li><a href="#dependent-variable-wearing_patch" id="toc-dependent-variable-wearing_patch"><span class="toc-section-number">3.3</span> Dependent variable:
+<li><a href="#dependent-variable-wearing_patch" id="toc-dependent-variable-wearing_patch"><span class="toc-section-number">3.2</span> Dependent variable:
 wearing_patch</a></li>
+<li><a href="#dependent-variable-cigarette_counts" id="toc-dependent-variable-cigarette_counts"><span class="toc-section-number">3.3</span> Dependent variable:
+cigarette_counts</a></li>
 <li><a href="#dependent-variable-cigarette_availability" id="toc-dependent-variable-cigarette_availability"><span class="toc-section-number">3.4</span> Dependent variable:
 cigarette_availability</a></li>
-</ul></li>
-<li><a href="#what-would-make-good-predictors-for-time-varying-variables-is-the-same-ema-as-y" id="toc-what-would-make-good-predictors-for-time-varying-variables-is-the-same-ema-as-y"><span class="toc-section-number">4</span> What would make good predictors for
-time-varying variables is the same EMA as Y?</a>
-<ul>
-<li><a href="#wearing-patch" id="toc-wearing-patch"><span class="toc-section-number">4.1</span> Wearing patch</a></li>
-<li><a href="#cigarette-availability" id="toc-cigarette-availability"><span class="toc-section-number">4.2</span> Cigarette availability</a></li>
-<li><a href="#cigarette-counts" id="toc-cigarette-counts"><span class="toc-section-number">4.3</span> Cigarette counts</a></li>
 </ul></li>
 </ul>
 </div>
@@ -399,9 +392,9 @@ linear main effect</h1>
 ## 3                                income_val  0.57261420       -0.36851897         1.5137474 -0.020281023      -0.174678837        0.13411679 0.9926655 0.5371357
 ## 4                        food_security_mean  0.19247281       -1.01819002         1.4031356  0.309723402      -0.561739162        1.18118597 1.1368781 0.5111111
 ## 5                                SSSladders  0.21064482       -1.43015878         1.8514484  0.064896124      -0.196583555        0.32637580 1.0289345 0.5178819
-## 6                                     pp1_1  8.33634998        5.81897792        10.8537220 -1.265418079      -2.018266776       -0.51256938 0.9993907 0.2713643
-## 7                           FinancialStrain 10.32884515        7.56520908        13.0924812 -3.056831296      -4.335210800       -1.77845179 0.9993384 0.6236882
-## 8                                   nd_mean  7.56643920        5.94992149         9.1829569 -1.421834896      -2.147480908       -0.69618889 0.9983760 0.5009881
+## 6                                     pp1_1  0.19402248       -1.42538104         1.8134260  0.127004531      -0.429253394        0.68326246 1.0569349 0.4808297
+## 7                           FinancialStrain  0.97092602       -0.66780342         2.6096555 -0.243447330      -1.152594833        0.66570017 0.9296126 0.5551540
+## 8                                   nd_mean -1.06034614       -2.65250320         0.5318109  0.901165857       0.082918351        1.71941336 1.7893128 0.6112847
 ## 9                                  srq_mean -0.11892240       -2.58174380         2.3438990  0.177969198      -0.456777608        0.81271601 1.0945197 0.5558968
 ## 10                              has_partner  0.74193734        0.03692831         1.4469464 -0.411695658      -1.402117817        0.57872650 0.8588745 0.5512256
 ## 11                                sni_count  1.01132208       -0.53183094         2.5544751 -0.091759094      -0.355683598        0.17216541 0.9750085 0.5663988
@@ -444,54 +437,34 @@ the same EMA</h1>
 <div id="dependent-variable-y" class="section level2" number="3.1">
 <h2><span class="header-section-number">3.1</span> Dependent variable:
 Y</h2>
-<pre><code>##                predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 est_beta2 conf_int_lb_beta2 conf_int_ub_beta2   auc
-## 1       cigarette_counts     0.604             0.398             0.811     0.003            -0.028             0.033     0.003            -0.034             0.040 0.496
-## 2          wearing_patch     0.591             0.375             0.808     0.001            -0.030             0.031     0.058            -0.157             0.274 0.527
-## 3 cigarette_availability     0.623             0.395             0.852     0.002            -0.029             0.033    -0.008            -0.066             0.050 0.523</code></pre>
+<pre><code>##                predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1   auc
+## 1       cigarette_counts     0.485            -0.026             0.996     0.010            -0.145             0.165 0.510
+## 2          wearing_patch     0.381            -0.283             1.046     0.251            -0.663             1.165 0.530
+## 3 cigarette_availability     0.552            -0.034             1.138    -0.037            -0.276             0.201 0.524</code></pre>
 </div>
-<div id="dependent-variable-cigarette_counts" class="section level2" number="3.2">
+<div id="dependent-variable-wearing_patch" class="section level2" number="3.2">
 <h2><span class="header-section-number">3.2</span> Dependent variable:
-cigarette_counts</h2>
-<pre><code>##                predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 est_beta2 conf_int_lb_beta2 conf_int_ub_beta2   auc
-## 1                      Y     2.576             0.837             4.315    -0.260            -0.527             0.008     0.080            -0.933             1.093 0.761
-## 2          wearing_patch     2.859             1.073             4.645    -0.212            -0.475             0.050    -1.139            -2.225            -0.052 0.749
-## 3 cigarette_availability     0.955            -0.539             2.450    -0.153            -0.403             0.097     0.616             0.371             0.861 0.679</code></pre>
-</div>
-<div id="dependent-variable-wearing_patch" class="section level2" number="3.3">
-<h2><span class="header-section-number">3.3</span> Dependent variable:
 wearing_patch</h2>
-<pre><code>##                predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 est_beta2 conf_int_lb_beta2 conf_int_ub_beta2   auc
-## 1                      Y     0.118            -0.098             0.335     0.049             0.015             0.082     0.056            -0.151             0.264 0.640
-## 2       cigarette_counts     0.262             0.062             0.462     0.038             0.004             0.071    -0.041            -0.073            -0.008 0.694
-## 3 cigarette_availability     0.391             0.146             0.635     0.033            -0.001             0.067    -0.085            -0.139            -0.030 0.745</code></pre>
+<pre><code>##                predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1   auc
+## 1                      Y    -0.499            -1.271             0.273     0.251            -0.663             1.165 0.529
+## 2       cigarette_counts    -0.038            -0.591             0.514    -0.339            -0.833             0.156 0.658
+## 3 cigarette_availability     0.354            -0.266             0.975    -0.421            -0.687            -0.156 0.694</code></pre>
+</div>
+<div id="dependent-variable-cigarette_counts" class="section level2" number="3.3">
+<h2><span class="header-section-number">3.3</span> Dependent variable:
+cigarette_counts</h2>
+<pre><code>##                predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 root_mean_squared_error one_std_dev
+## 1                      Y     1.189             0.317             2.061     0.068            -0.973             1.109                   2.600       2.611
+## 2          wearing_patch     1.819             0.888             2.750    -1.390            -2.499            -0.282                   2.517       2.620
+## 3 cigarette_availability     0.046            -0.075             0.166     0.662             0.415             0.910                   2.284       2.620</code></pre>
 </div>
 <div id="dependent-variable-cigarette_availability" class="section level2" number="3.4">
 <h2><span class="header-section-number">3.4</span> Dependent variable:
 cigarette_availability</h2>
-<pre><code>##          predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 est_beta2 conf_int_lb_beta2 conf_int_ub_beta2   auc
-## 1                Y     2.881             1.848             3.913    -0.186            -0.325            -0.046    -0.120            -0.955             0.716 0.831
-## 2 cigarette_counts     1.925             0.934             2.916    -0.098            -0.244             0.048     0.329             0.195             0.463 0.791
-## 3    wearing_patch     3.001             2.139             3.864    -0.124            -0.271             0.022    -1.264            -2.109            -0.419 0.785</code></pre>
-</div>
-</div>
-<div id="what-would-make-good-predictors-for-time-varying-variables-is-the-same-ema-as-y" class="section level1" number="4">
-<h1><span class="header-section-number">4</span> What would make good
-predictors for time-varying variables is the same EMA as Y?</h1>
-<div id="wearing-patch" class="section level2" number="4.1">
-<h2><span class="header-section-number">4.1</span> Wearing patch</h2>
-<pre><code>##                            predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1   auc
-## 1 days_between_v1_and_coinflip_local     0.152            -0.019             0.324     0.049             0.016             0.082 0.639</code></pre>
-</div>
-<div id="cigarette-availability" class="section level2" number="4.2">
-<h2><span class="header-section-number">4.2</span> Cigarette
-availability</h2>
-<pre><code>##                            predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1   auc
-## 1 days_between_v1_and_coinflip_local     2.809              1.95             3.667    -0.186            -0.325            -0.047 0.825</code></pre>
-</div>
-<div id="cigarette-counts" class="section level2" number="4.3">
-<h2><span class="header-section-number">4.3</span> Cigarette counts</h2>
-<pre><code>##                            predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1   auc
-## 1 days_between_v1_and_coinflip_local     2.625             0.911             4.339    -0.259            -0.528             0.009 0.758</code></pre>
+<pre><code>##          predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 root_mean_squared_error one_std_dev
+## 1                Y     1.889             1.066             2.712    -0.135            -1.001             0.731                   1.900       1.909
+## 2 cigarette_counts     1.368             0.892             1.844     0.352             0.230             0.474                   1.665       1.909
+## 3    wearing_patch     2.391             1.793             2.989    -1.412            -2.195            -0.628                   1.769       1.909</code></pre>
 </div>
 </div>
 
