--- a/analysis-multiple-imputation/diagnostics/explore-predictors-stratum-01.html
+++ b/analysis-multiple-imputation/diagnostics/explore-predictors-stratum-01.html
@@ -366,10 +366,10 @@ effect</a></li>
 EMA</a>
 <ul>
 <li><a href="#dependent-variable-y" id="toc-dependent-variable-y"><span class="toc-section-number">3.1</span> Dependent variable: Y</a></li>
-<li><a href="#dependent-variable-cigarette_counts" id="toc-dependent-variable-cigarette_counts"><span class="toc-section-number">3.2</span> Dependent variable:
-cigarette_counts</a></li>
-<li><a href="#dependent-variable-wearing_patch" id="toc-dependent-variable-wearing_patch"><span class="toc-section-number">3.3</span> Dependent variable:
+<li><a href="#dependent-variable-wearing_patch" id="toc-dependent-variable-wearing_patch"><span class="toc-section-number">3.2</span> Dependent variable:
 wearing_patch</a></li>
+<li><a href="#dependent-variable-cigarette_counts" id="toc-dependent-variable-cigarette_counts"><span class="toc-section-number">3.3</span> Dependent variable:
+cigarette_counts</a></li>
 <li><a href="#dependent-variable-cigarette_availability" id="toc-dependent-variable-cigarette_availability"><span class="toc-section-number">3.4</span> Dependent variable:
 cigarette_availability</a></li>
 </ul></li>
@@ -433,34 +433,34 @@ the same EMA</h1>
 <div id="dependent-variable-y" class="section level2" number="3.1">
 <h2><span class="header-section-number">3.1</span> Dependent variable:
 Y</h2>
-<pre><code>##                predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 est_beta2 conf_int_lb_beta2 conf_int_ub_beta2   auc
-## 1       cigarette_counts     0.467             0.205             0.728     0.254            -0.053             0.562     0.039            -0.047             0.126 0.505
-## 2          wearing_patch     0.481             0.141             0.821     0.330            -0.188             0.847    -0.024            -0.580             0.532 0.502
-## 3 cigarette_availability     0.758             0.540             0.976     0.390             0.083             0.698    -0.103            -0.172            -0.034 0.667</code></pre>
+<pre><code>##                predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1   auc
+## 1       cigarette_counts     0.403            -0.320             1.125     0.235            -0.225             0.696 0.505
+## 2          wearing_patch     0.659             0.036             1.283    40.926            38.870            42.983 0.517
+## 3 cigarette_availability     2.401             0.503             4.299    -0.531            -1.052            -0.009 0.612</code></pre>
 </div>
-<div id="dependent-variable-cigarette_counts" class="section level2" number="3.2">
+<div id="dependent-variable-wearing_patch" class="section level2" number="3.2">
 <h2><span class="header-section-number">3.2</span> Dependent variable:
-cigarette_counts</h2>
-<pre><code>##                predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 est_beta2 conf_int_lb_beta2 conf_int_ub_beta2   auc
-## 1                      Y     0.171            -0.961             1.303     1.020            -1.010             3.050     0.228            -0.322             0.777 0.511
-## 2          wearing_patch    -0.684            -1.863             0.496     3.012             0.697             5.327    -4.275            -6.964            -1.587 0.825
-## 3 cigarette_availability     0.111            -1.098             1.321     1.020            -1.034             3.074     0.074            -0.118             0.266 0.841</code></pre>
-</div>
-<div id="dependent-variable-wearing_patch" class="section level2" number="3.3">
-<h2><span class="header-section-number">3.3</span> Dependent variable:
 wearing_patch</h2>
-<pre><code>##                predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 est_beta2 conf_int_lb_beta2 conf_int_ub_beta2 auc
-## 1                      Y    -0.231            -0.487             0.025     0.450            -0.046             0.946    -0.001            -0.029             0.027   1
-## 2       cigarette_counts    -0.221            -0.438            -0.004     0.487             0.024             0.949    -0.034            -0.067            -0.001   1
-## 3 cigarette_availability    -0.227            -0.480             0.026     0.451            -0.046             0.949    -0.002            -0.012             0.008   1</code></pre>
+<pre><code>##                predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1   auc
+## 1                      Y   -46.018           -46.018           -46.018    42.651            40.631            44.671 0.670
+## 2       cigarette_counts    -2.996            -5.004            -0.987   -64.305           -65.172           -63.439 0.773
+## 3 cigarette_availability  -141.326          -141.750          -140.901    34.507            33.859            35.156 0.693</code></pre>
+</div>
+<div id="dependent-variable-cigarette_counts" class="section level2" number="3.3">
+<h2><span class="header-section-number">3.3</span> Dependent variable:
+cigarette_counts</h2>
+<pre><code>##                predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 root_mean_squared_error one_std_dev
+## 1                      Y     0.706             0.359             1.052     0.294            -0.291             0.879                   1.159       1.180
+## 2          wearing_patch     0.943             0.588             1.298    -0.943            -1.298            -0.588                   1.189       1.211
+## 3 cigarette_availability     0.597            -0.054             1.247     0.103            -0.103             0.310                   1.176       1.197</code></pre>
 </div>
 <div id="dependent-variable-cigarette_availability" class="section level2" number="3.4">
 <h2><span class="header-section-number">3.4</span> Dependent variable:
 cigarette_availability</h2>
-<pre><code>##          predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 est_beta2 conf_int_lb_beta2 conf_int_ub_beta2   auc
-## 1                Y     3.019             2.447             3.591     1.161             0.269             2.052    -0.771            -1.433            -0.108 0.767
-## 2 cigarette_counts     2.617             1.835             3.398     0.834             0.127             1.541     0.092            -0.145             0.329 0.733
-## 3    wearing_patch     2.579             1.581             3.578     1.031            -0.401             2.464    -0.277            -1.745             1.191 0.700</code></pre>
+<pre><code>##          predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 root_mean_squared_error one_std_dev
+## 1                Y     3.625             3.284             3.966    -0.692            -1.322            -0.061                   1.265       1.322
+## 2 cigarette_counts     3.058             2.540             3.576     0.126            -0.125             0.376                   1.299       1.322
+## 3    wearing_patch     3.136             2.745             3.528     0.864             0.472             1.255                   1.310       1.331</code></pre>
 </div>
 </div>
 
