--- a/analysis-multiple-imputation/diagnostics/explore-predictors-stratum-03.html
+++ b/analysis-multiple-imputation/diagnostics/explore-predictors-stratum-03.html
@@ -374,10 +374,10 @@ time-varying variables that ended up in the shortlist</a>
 EMA</a>
 <ul>
 <li><a href="#dependent-variable-y" id="toc-dependent-variable-y"><span class="toc-section-number">5.1</span> Dependent variable: Y</a></li>
-<li><a href="#dependent-variable-cigarette_counts" id="toc-dependent-variable-cigarette_counts"><span class="toc-section-number">5.2</span> Dependent variable:
-cigarette_counts</a></li>
-<li><a href="#dependent-variable-wearing_patch" id="toc-dependent-variable-wearing_patch"><span class="toc-section-number">5.3</span> Dependent variable:
+<li><a href="#dependent-variable-wearing_patch" id="toc-dependent-variable-wearing_patch"><span class="toc-section-number">5.2</span> Dependent variable:
 wearing_patch</a></li>
+<li><a href="#dependent-variable-cigarette_counts" id="toc-dependent-variable-cigarette_counts"><span class="toc-section-number">5.3</span> Dependent variable:
+cigarette_counts</a></li>
 <li><a href="#dependent-variable-cigarette_availability" id="toc-dependent-variable-cigarette_availability"><span class="toc-section-number">5.4</span> Dependent variable:
 cigarette_availability</a></li>
 </ul></li>
@@ -400,11 +400,11 @@ linear main effect</h1>
 ## 3                             income_val     0.578             0.022             1.133    -0.027            -0.118             0.065 0.990 0.542
 ## 4                     food_security_mean    -0.105            -0.879             0.670     0.410            -0.094             0.914 1.215 0.560
 ## 5                             SSSladders     0.379            -0.648             1.407     0.020            -0.142             0.181 1.008 0.509
-## 6                                  pp1_1     9.634             7.815            11.454    -1.676            -2.186            -1.167 1.000 0.579
-## 7                        FinancialStrain    11.038             9.361            12.714    -3.312            -4.102            -2.523 1.000 0.465
-## 8                                nd_mean     7.019             5.239             8.799    -1.101            -1.891            -0.312 0.998 0.573
+## 6                                  pp1_1     0.172            -0.780             1.124     0.114            -0.192             0.421 1.052 0.517
+## 7                        FinancialStrain     0.220            -0.756             1.196     0.148            -0.346             0.642 1.065 0.529
+## 8                                nd_mean     0.436            -0.630             1.502     0.035            -0.501             0.571 1.014 0.520
 ## 9                               srq_mean    -0.490            -1.534             0.554     0.246            -0.046             0.538 1.157 0.556
-## 10                           has_partner     4.122             3.342             4.903     1.626             0.377             2.875 1.013 0.564
+## 10                           has_partner     0.640             0.267             1.013    -0.294            -0.874             0.287 0.895 0.537
 ## 11                             sni_count     0.396            -0.364             1.157     0.010            -0.133             0.154 1.004 0.490
 ## 12                            sni_people     0.750             0.195             1.305    -0.025            -0.065             0.014 0.992 0.566
 ## 13                            sni_active     0.579             0.123             1.036    -0.113            -0.429             0.203 0.959 0.547
@@ -483,29 +483,29 @@ shortlist</h1>
 <div id="wearing-patch" class="section level2" number="4.1">
 <h2><span class="header-section-number">4.1</span> Wearing patch</h2>
 <pre><code>##                     predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 est_beta2 conf_int_lb_beta2 conf_int_ub_beta2   auc
-## 1          wearing_patch_lag1     0.042             0.021             0.062     0.011             0.006             0.017     0.812             0.771             0.852 0.933
-## 2 wearing_patch_sum_past24hrs     0.100             0.051             0.148    -0.003            -0.014             0.007     0.169             0.161             0.177 0.946</code></pre>
+## 1          wearing_patch_lag1    -2.979            -3.336            -2.621     0.139             0.081             0.197     4.628             4.153             5.103 0.933
+## 2 wearing_patch_sum_past24hrs    -2.334            -2.859            -1.808    -0.037            -0.137             0.063     1.147             0.990             1.305 0.946</code></pre>
 </div>
 <div id="cigarette-availability" class="section level2" number="4.2">
 <h2><span class="header-section-number">4.2</span> Cigarette
 availability</h2>
-<pre><code>##                               predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 est_beta2 conf_int_lb_beta2 conf_int_ub_beta2   auc
-## 1           cigarette_availability_lag1     0.728             0.498             0.957    -0.044            -0.066            -0.022     0.777             0.717             0.837 0.793
-## 2 cigarette_availability_mean_past24hrs     0.314             0.059             0.569    -0.019            -0.048             0.010     0.882             0.831             0.933 0.796</code></pre>
+<pre><code>##                               predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 est_beta2 conf_int_lb_beta2 conf_int_ub_beta2 root_mean_squared_error one_std_dev
+## 1           cigarette_availability_lag1     0.728             0.498             0.957    -0.044            -0.066            -0.022     0.777             0.717             0.837                   1.083       1.788
+## 2 cigarette_availability_mean_past24hrs     0.314             0.059             0.569    -0.019            -0.048             0.010     0.882             0.831             0.933                   1.040       1.750</code></pre>
 </div>
 <div id="cigarette-counts" class="section level2" number="4.3">
 <h2><span class="header-section-number">4.3</span> Cigarette counts</h2>
-<pre><code>##                                predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 est_beta2 conf_int_lb_beta2 conf_int_ub_beta2   auc
-## 1                  cigarette_counts_lag1     0.594             0.448             0.740    -0.064            -0.085            -0.044     0.299             0.212             0.387 0.631
-## 2         cigarette_counts_sum_past24hrs     0.451             0.266             0.635    -0.061            -0.085            -0.037     0.122             0.093             0.151 0.626
-## 3               baseline_tobacco_history     0.550             0.257             0.843    -0.114            -0.142            -0.087     0.042             0.017             0.067 0.564
-## 4                           Nicotine_dep     0.823             0.521             1.125    -0.114            -0.144            -0.085     0.102             0.009             0.196 0.565
-## 5                     wearing_patch_lag1     0.966             0.760             1.172    -0.070            -0.096            -0.044    -0.378            -0.539            -0.217 0.568
-## 6            wearing_patch_sum_past24hrs     0.961             0.690             1.233    -0.062            -0.099            -0.024    -0.094            -0.146            -0.041 0.559
-## 7                                 Y_lag1     1.011             0.779             1.243    -0.094            -0.121            -0.066    -0.155            -0.293            -0.017 0.539
-## 8                        Y_sum_past24hrs     1.117             0.816             1.418    -0.082            -0.121            -0.043    -0.080            -0.139            -0.022 0.504
-## 9            cigarette_availability_lag1     0.477             0.295             0.659    -0.073            -0.101            -0.045     0.143             0.103             0.184 0.672
-## 10 cigarette_availability_mean_past24hrs     0.424             0.145             0.703    -0.076            -0.116            -0.035     0.166             0.100             0.232 0.655</code></pre>
+<pre><code>##                                predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 est_beta2 conf_int_lb_beta2 conf_int_ub_beta2 root_mean_squared_error one_std_dev
+## 1                  cigarette_counts_lag1     0.594             0.448             0.740    -0.064            -0.085            -0.044     0.299             0.212             0.387                   0.842       0.954
+## 2         cigarette_counts_sum_past24hrs     0.451             0.266             0.635    -0.061            -0.085            -0.037     0.122             0.093             0.151                   0.753       0.918
+## 3               baseline_tobacco_history     0.550             0.257             0.843    -0.114            -0.142            -0.087     0.042             0.017             0.067                   1.125       1.200
+## 4                           Nicotine_dep     0.823             0.521             1.125    -0.114            -0.144            -0.085     0.102             0.009             0.196                   1.157       1.205
+## 5                     wearing_patch_lag1     0.966             0.760             1.172    -0.070            -0.096            -0.044    -0.378            -0.539            -0.217                   0.898       0.952
+## 6            wearing_patch_sum_past24hrs     0.961             0.690             1.233    -0.062            -0.099            -0.024    -0.094            -0.146            -0.041                   0.862       0.930
+## 7                                 Y_lag1     1.011             0.779             1.243    -0.094            -0.121            -0.066    -0.155            -0.293            -0.017                   0.911       0.950
+## 8                        Y_sum_past24hrs     1.117             0.816             1.418    -0.082            -0.121            -0.043    -0.080            -0.139            -0.022                   0.868       0.923
+## 9            cigarette_availability_lag1     0.477             0.295             0.659    -0.073            -0.101            -0.045     0.143             0.103             0.184                   0.887       0.958
+## 10 cigarette_availability_mean_past24hrs     0.424             0.145             0.703    -0.076            -0.116            -0.035     0.166             0.100             0.232                   0.845       0.927</code></pre>
 </div>
 </div>
 <div id="predictors-measured-in-the-same-ema" class="section level1" number="5">
@@ -515,33 +515,33 @@ the same EMA</h1>
 <h2><span class="header-section-number">5.1</span> Dependent variable:
 Y</h2>
 <pre><code>##                predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 est_beta2 conf_int_lb_beta2 conf_int_ub_beta2   auc
-## 1       cigarette_counts     0.599             0.516             0.682     0.007            -0.004             0.019    -0.033            -0.054            -0.013 0.558
-## 2          wearing_patch     0.548             0.468             0.629     0.002            -0.011             0.015     0.136             0.045             0.226 0.577
-## 3 cigarette_availability     0.633             0.507             0.760     0.007            -0.006             0.020    -0.021            -0.051             0.008 0.561</code></pre>
+## 1       cigarette_counts     0.402             0.056             0.748     0.032            -0.018             0.081    -0.140            -0.232            -0.047 0.558
+## 2          wearing_patch     0.191            -0.138             0.520     0.010            -0.046             0.066     0.586             0.187             0.984 0.577
+## 3 cigarette_availability     0.554             0.003             1.104     0.031            -0.024             0.086    -0.091            -0.221             0.038 0.562</code></pre>
 </div>
-<div id="dependent-variable-cigarette_counts" class="section level2" number="5.2">
+<div id="dependent-variable-wearing_patch" class="section level2" number="5.2">
 <h2><span class="header-section-number">5.2</span> Dependent variable:
-cigarette_counts</h2>
-<pre><code>##                predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 est_beta2 conf_int_lb_beta2 conf_int_ub_beta2   auc
-## 1                      Y     1.216             0.965             1.466    -0.111            -0.140            -0.082    -0.192            -0.327            -0.056 0.535
-## 2          wearing_patch     1.161             0.934             1.389    -0.082            -0.108            -0.057    -0.470            -0.635            -0.305 0.572
-## 3 cigarette_availability     0.553             0.357             0.749    -0.083            -0.111            -0.055     0.172             0.126             0.219 0.682</code></pre>
-</div>
-<div id="dependent-variable-wearing_patch" class="section level2" number="5.3">
-<h2><span class="header-section-number">5.3</span> Dependent variable:
 wearing_patch</h2>
 <pre><code>##                predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 est_beta2 conf_int_lb_beta2 conf_int_ub_beta2   auc
-## 1                      Y     0.050            -0.013             0.113     0.064             0.049             0.079     0.124             0.039             0.209 0.720
-## 2       cigarette_counts     0.203             0.129             0.276     0.057             0.043             0.071    -0.075            -0.101            -0.049 0.730
-## 3 cigarette_availability     0.278             0.153             0.403     0.057             0.041             0.072    -0.049            -0.079            -0.019 0.728</code></pre>
+## 1                      Y    -2.050            -2.420            -1.680     0.287             0.214             0.360     0.588             0.189             0.988 0.720
+## 2       cigarette_counts    -1.186            -1.563            -0.809     0.245             0.176             0.314    -0.718            -0.997            -0.439 0.732
+## 3 cigarette_availability    -1.024            -1.565            -0.483     0.258             0.186             0.329    -0.222            -0.359            -0.086 0.728</code></pre>
+</div>
+<div id="dependent-variable-cigarette_counts" class="section level2" number="5.3">
+<h2><span class="header-section-number">5.3</span> Dependent variable:
+cigarette_counts</h2>
+<pre><code>##                predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 est_beta2 conf_int_lb_beta2 conf_int_ub_beta2 root_mean_squared_error one_std_dev
+## 1                      Y     1.216             0.965             1.466    -0.111            -0.140            -0.082    -0.192            -0.327            -0.056                   1.157       1.200
+## 2          wearing_patch     1.161             0.934             1.389    -0.082            -0.108            -0.057    -0.470            -0.635            -0.305                   1.140       1.200
+## 3 cigarette_availability     0.553             0.357             0.749    -0.083            -0.111            -0.055     0.172             0.126             0.219                   1.124       1.203</code></pre>
 </div>
 <div id="dependent-variable-cigarette_availability" class="section level2" number="5.4">
 <h2><span class="header-section-number">5.4</span> Dependent variable:
 cigarette_availability</h2>
-<pre><code>##          predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 est_beta2 conf_int_lb_beta2 conf_int_ub_beta2   auc
-## 1                Y     3.387             3.021             3.753    -0.177            -0.235            -0.119    -0.270            -0.644             0.104 0.522
-## 2 cigarette_counts     2.813             2.462             3.163    -0.136            -0.195            -0.078     0.380             0.248             0.512 0.549
-## 3    wearing_patch     3.319             3.016             3.622    -0.136            -0.197            -0.076    -0.679            -1.090            -0.268 0.497</code></pre>
+<pre><code>##          predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 est_beta2 conf_int_lb_beta2 conf_int_ub_beta2 root_mean_squared_error one_std_dev
+## 1                Y     3.387             3.021             3.753    -0.177            -0.235            -0.119    -0.270            -0.644             0.104                   1.721       1.794
+## 2 cigarette_counts     2.813             2.462             3.163    -0.136            -0.195            -0.078     0.380             0.248             0.512                   1.669       1.794
+## 3    wearing_patch     3.319             3.016             3.622    -0.136            -0.197            -0.076    -0.679            -1.090            -0.268                   1.698       1.795</code></pre>
 </div>
 </div>
 
