--- a/analysis-multiple-imputation/diagnostics/explore-predictors-stratum-03.html
+++ b/analysis-multiple-imputation/diagnostics/explore-predictors-stratum-03.html
@@ -363,6 +363,13 @@ effect, controlling for
 <code>days_between_v1_and_coinflip_local</code></a></li>
 <li><a href="#enter-predictors-as-a-quadratic-main-effect" id="toc-enter-predictors-as-a-quadratic-main-effect"><span class="toc-section-number">2</span> Enter predictors as a quadratic main
 effect</a></li>
+<li><a href="#among-predictors-that-make-it-to-the-shortlist-see-what-variables-could-be-associated-with-them" id="toc-among-predictors-that-make-it-to-the-shortlist-see-what-variables-could-be-associated-with-them"><span class="toc-section-number">3</span> Among predictors that make it to the
+shortlist, see what variables could be associated with them</a>
+<ul>
+<li><a href="#wearing-patch" id="toc-wearing-patch"><span class="toc-section-number">3.1</span> Wearing patch</a></li>
+<li><a href="#cigarette-availability" id="toc-cigarette-availability"><span class="toc-section-number">3.2</span> Cigarette availability</a></li>
+<li><a href="#cigarette-counts" id="toc-cigarette-counts"><span class="toc-section-number">3.3</span> Cigarette counts</a></li>
+</ul></li>
 </ul>
 </div>
 
@@ -434,6 +441,30 @@ quadratic main effect</h1>
 ## 14      isel_belonging    -1.022            -3.326             1.281     0.043            -0.009             0.094     1.315            -0.594             3.224    -0.285            -0.659             0.090            1
 ## 15      isel_appraisal    -0.836            -2.892             1.220     0.051            -0.001             0.103     1.159            -0.561             2.878    -0.249            -0.578             0.081            1
 ## 16       isel_tangible    -1.227            -3.524             1.070     0.047            -0.005             0.098     1.419            -0.474             3.312    -0.293            -0.657             0.071            1</code></pre>
+</div>
+<div id="among-predictors-that-make-it-to-the-shortlist-see-what-variables-could-be-associated-with-them" class="section level1" number="3">
+<h1><span class="header-section-number">3</span> Among predictors that
+make it to the shortlist, see what variables could be associated with
+them</h1>
+<div id="wearing-patch" class="section level2" number="3.1">
+<h2><span class="header-section-number">3.1</span> Wearing patch</h2>
+<pre><code>##                     predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 est_beta2 conf_int_lb_beta2 conf_int_ub_beta2 screened_out
+## 1          wearing_patch_lag1    -2.979            -3.336            -2.621     0.139             0.081             0.197     4.628             4.153             5.103            0
+## 2 wearing_patch_sum_past24hrs    -2.334            -2.859            -1.808    -0.037            -0.137             0.063     1.147             0.990             1.305            0</code></pre>
+</div>
+<div id="cigarette-availability" class="section level2" number="3.2">
+<h2><span class="header-section-number">3.2</span> Cigarette
+availability</h2>
+<pre><code>##                               predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 est_beta2 conf_int_lb_beta2 conf_int_ub_beta2 screened_out
+## 1           cigarette_availability_lag1     0.728             0.498             0.957    -0.044            -0.066            -0.022     0.777             0.717             0.837            0
+## 2 cigarette_availability_mean_past24hrs     0.314             0.059             0.569    -0.019            -0.048             0.010     0.882             0.831             0.933            0</code></pre>
+</div>
+<div id="cigarette-counts" class="section level2" number="3.3">
+<h2><span class="header-section-number">3.3</span> Cigarette counts</h2>
+<pre><code>##                        predictor est_beta0 conf_int_lb_beta0 conf_int_ub_beta0 est_beta1 conf_int_lb_beta1 conf_int_ub_beta1 est_beta2 conf_int_lb_beta2 conf_int_ub_beta2 screened_out
+## 1          cigarette_counts_lag1     0.594             0.448             0.740    -0.064            -0.085            -0.044     0.299             0.212             0.387            0
+## 2 cigarette_counts_sum_past24hrs     0.451             0.266             0.635    -0.061            -0.085            -0.037     0.122             0.093             0.151            0</code></pre>
+</div>
 </div>
 
 
