--- a/analysis-complete-case/analysis-H2.html
+++ b/analysis-complete-case/analysis-H2.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2024-06-12" />
+<meta name="date" content="2024-06-25" />
 
 <title>MARS MRT: H2 and Exploratory Analyses on Moderated Effect of Time</title>
 
@@ -351,7 +351,7 @@ display: none;
 
 <h1 class="title toc-ignore">MARS MRT: H2 and Exploratory Analyses on
 Moderated Effect of Time</h1>
-<h4 class="date">June 12, 2024</h4>
+<h4 class="date">June 25, 2024</h4>
 
 </div>
 
@@ -450,10 +450,10 @@ the log risk ratio scale</h2>
 <div id="estimated-effect-on-the-risk-ratio-scale" class="section level2" number="1.3">
 <h2><span class="header-section-number">1.3</span> Estimated effect on
 the risk ratio scale</h2>
-<pre><code>##   exp_estimates  stderr_rr    rrLB95   rrUB95
-## 1      1.208190 0.06764709 1.0734007 1.342980
-## 2      1.020628 0.05512497 0.9107886 1.130466
-## 3      1.183772 0.06209335 1.0600485 1.307496</code></pre>
+<pre><code>##   exp_estimates    rrLB95   rrUB95
+## 1      1.208190 1.0806475 1.350787
+## 2      1.020628 0.9164925 1.136595
+## 3      1.183772 1.0662946 1.314193</code></pre>
 </div>
 <div id="estimated-effect-on-the-risk-difference-scale" class="section level2" number="1.4">
 <h2><span class="header-section-number">1.4</span> Estimated effect on
@@ -642,10 +642,10 @@ the log risk ratio scale</h2>
 <div id="estimated-effect-on-the-risk-ratio-scale-1" class="section level2" number="4.3">
 <h2><span class="header-section-number">4.3</span> Estimated effect on
 the risk ratio scale</h2>
-<pre><code>##   exp_estimates  stderr_rr    rrLB95   rrUB95
-## 1      1.253637 0.07279400 1.1088526 1.398421
-## 2      1.057479 0.05224197 0.9535716 1.161386
-## 3      1.185496 0.05881521 1.0685150 1.302477</code></pre>
+<pre><code>##   exp_estimates    rrLB95   rrUB95
+## 1      1.253637 1.1169005 1.407113
+## 2      1.057479 0.9585133 1.166662
+## 3      1.185496 1.0741014 1.308443</code></pre>
 </div>
 <div id="estimated-effect-on-the-risk-difference-scale-1" class="section level2" number="4.4">
 <h2><span class="header-section-number">4.4</span> Estimated effect on
