Update H2 analysis on risk difference scale.

--- a/analysis-complete-case/analysis-H2.html
+++ b/analysis-complete-case/analysis-H2.html
@@ -470,25 +470,27 @@ the risk ratio scale</h2>
 <div id="estimated-effect-on-the-risk-difference-scale" class="section level2" number="1.4">
 <h2><span class="header-section-number">1.4</span> Estimated effect on
 the risk difference scale</h2>
-<pre><code>##                              variable     estimates        LCL95       UCL95     std_err
-## 1                         (Intercept)  0.4161951968  0.094938391 0.737452003 0.163909546
-## 2                      is_high_effort  0.1181492567  0.049283560 0.187014954 0.035136205
-## 3                       is_low_effort  0.0032263555 -0.060240470 0.066693181 0.032381628
-## 4                                 age  0.0013448358 -0.004724303 0.007413975 0.003096556
-## 5                             is_male -0.1311535256 -0.320789284 0.058482233 0.096754716
-## 6                           is_latino  0.2028803406  0.006048664 0.399712017 0.100426170
-## 7             is_not_latino_and_black  0.1402973110 -0.046182518 0.326777140 0.095144518
-## 8             is_not_latino_and_other  0.1195862971 -0.147193775 0.386366369 0.136114783
-## 9            baseline_tobacco_history  0.0004058125 -0.010244252 0.011055877 0.005433806
-## 10                        has_partner -0.0173080134 -0.174184293 0.139568266 0.080040389
-## 11                         income_val -0.0078223302 -0.032573189 0.016928528 0.012628221
-## 12                hour_coinflip_local -0.0003683512 -0.007522058 0.006785356 0.003649917
-## 13 days_between_v1_and_coinflip_local  0.0083770377 -0.006008619 0.022762694 0.007339756
-## 14                   any_response_2qs  0.0633825359 -0.030883869 0.157648941 0.048095988</code></pre>
+<pre><code>##                              variable     estimates        LCL95        UCL95     std_err
+## 1                         (Intercept)  0.8360452619  0.621882956  1.050207568 0.109268490
+## 2                      is_high_effort  0.1220749784  0.060112145  0.184037811 0.031614271
+## 3                       is_low_effort  0.0115243408 -0.045674301  0.068722982 0.029183517
+## 4                                 age  0.0006907091 -0.002876810  0.004258228 0.001820196
+## 5                             is_male -0.0828235319 -0.197613925  0.031966861 0.058567603
+## 6                           is_latino  0.1214642957  0.002409836  0.240518755 0.060743187
+## 7             is_not_latino_and_black  0.0799328998 -0.036584473  0.196450273 0.059448732
+## 8             is_not_latino_and_other  0.0778168047 -0.071205968  0.226839577 0.076033424
+## 9            baseline_tobacco_history  0.0007655454 -0.005539286  0.007070377 0.003216810
+## 10                        has_partner  0.0062727963 -0.085560884  0.098106476 0.046854779
+## 11                         income_val -0.0039885969 -0.018291644  0.010314450 0.007297607
+## 12                hour_coinflip_local  0.0003699045 -0.005135294  0.005875103 0.002808826
+## 13 days_between_v1_and_coinflip_local  0.0027060895 -0.005897209  0.011309388 0.004389519
+## 14                   any_response_2qs  0.0250817470 -0.041409409  0.091572903 0.033924682
+## 15             any_recent_eligible_dp -0.6298702110 -0.752263792 -0.507476630 0.062446852
+## 16    engagement_most_recent_eligible  0.4465621938  0.354664386  0.538460002 0.046887498</code></pre>
 <pre><code>##       contrast est_contrast        LB95       UB95 est_stderr_contrast
-## 1 high vs none  0.118149257  0.04928356 0.18701495          0.03513621
-## 2  low vs none  0.003226356 -0.06024047 0.06669318          0.03238163
-## 3  high vs low  0.114922901  0.04653185 0.18331395          0.03489403</code></pre>
+## 1 high vs none   0.12207498  0.06011215 0.18403781          0.03161427
+## 2  low vs none   0.01152434 -0.04567430 0.06872298          0.02918352
+## 3  high vs low   0.11055064  0.04852798 0.17257329          0.03164479</code></pre>
 </div>
 </div>
 <div id="exploratory-analysis-linear-effect-of-time" class="section level1" number="2">
@@ -793,7 +795,6 @@ the risk difference scale</h2>
 ## 1 high vs none   0.14530479  0.07713258 0.21347700          0.03478238
 ## 2  low vs none   0.01893876 -0.03874642 0.07662394          0.02943176
 ## 3  high vs low   0.12636603  0.06117250 0.19155956          0.03326261</code></pre>
-<pre><code>## [1] TRUE</code></pre>
 </div>
 </div>
 
