Save output of sensitivity analysis on risk difference scale.

--- a/analysis-complete-case/analysis-H2.html
+++ b/analysis-complete-case/analysis-H2.html
@@ -776,25 +776,27 @@ the risk ratio scale</h2>
 <div id="estimated-effect-on-the-risk-difference-scale-1" class="section level2" number="4.4">
 <h2><span class="header-section-number">4.4</span> Estimated effect on
 the risk difference scale</h2>
-<pre><code>##                              variable     estimates        LCL95       UCL95     std_err
-## 1                         (Intercept)  4.226477e-01  0.109259767 0.736035667 0.159894749
-## 2                      is_high_effort  1.453048e-01  0.077132583 0.213476998 0.034782378
-## 3                       is_low_effort  1.893876e-02 -0.038746422 0.076623943 0.029431756
-## 4                                 age  1.316622e-03 -0.004685775 0.007319019 0.003062504
-## 5                             is_male -1.138337e-01 -0.300452928 0.072785505 0.095215636
-## 6                           is_latino  1.872094e-01 -0.010000561 0.384419382 0.100619181
-## 7             is_not_latino_and_black  1.366157e-01 -0.046098580 0.319329977 0.093223284
-## 8             is_not_latino_and_other  1.304845e-01 -0.136473664 0.397442615 0.136205635
-## 9            baseline_tobacco_history -5.427401e-05 -0.010497833 0.010389285 0.005328445
-## 10                        has_partner -2.179044e-02 -0.178570399 0.134989517 0.079991244
-## 11                         income_val -7.619194e-03 -0.031678143 0.016439756 0.012275200
-## 12                hour_coinflip_local -8.031452e-04 -0.007755772 0.006149482 0.003547324
-## 13 days_between_v1_and_coinflip_local  6.921446e-03 -0.006121039 0.019963931 0.006654451
-## 14                   any_response_2qs  6.141990e-02 -0.027633307 0.150473100 0.045436143</code></pre>
+<pre><code>##                              variable     estimates        LCL95        UCL95     std_err
+## 1                         (Intercept)  0.5127788653  0.255521069  0.770036661 0.131256389
+## 2                      is_high_effort  0.1461983570  0.084264645  0.208132069 0.031599413
+## 3                       is_low_effort  0.0320112449 -0.018570346  0.082592836 0.025807409
+## 4                                 age  0.0006544582 -0.002880875  0.004189792 0.001803775
+## 5                             is_male -0.0744636171 -0.188183902  0.039256668 0.058021620
+## 6                           is_latino  0.1121650741 -0.006879399  0.231209547 0.060738092
+## 7             is_not_latino_and_black  0.0758784777 -0.038243390  0.190000345 0.058226512
+## 8             is_not_latino_and_other  0.0805407637 -0.070861462  0.231942990 0.077247453
+## 9            baseline_tobacco_history  0.0003578711 -0.005924657  0.006640399 0.003205430
+## 10                        has_partner  0.0061420933 -0.086824756  0.099108942 0.047432937
+## 11                         income_val -0.0044057330 -0.018507013  0.009695547 0.007194663
+## 12                hour_coinflip_local  0.0003821642 -0.005060578  0.005824906 0.002776960
+## 13 days_between_v1_and_coinflip_local  0.0028979476 -0.004814884  0.010610779 0.003935191
+## 14                   any_response_2qs  0.0260372709 -0.035807631  0.087882173 0.031554101
+## 15             any_recent_eligible_dp -0.3155432307 -0.473567174 -0.157519287 0.080625942
+## 16    engagement_most_recent_eligible  0.4474168256  0.361789182  0.533044469 0.043688376</code></pre>
 <pre><code>##       contrast est_contrast        LB95       UB95 est_stderr_contrast
-## 1 high vs none   0.14530479  0.07713258 0.21347700          0.03478238
-## 2  low vs none   0.01893876 -0.03874642 0.07662394          0.02943176
-## 3  high vs low   0.12636603  0.06117250 0.19155956          0.03326261</code></pre>
+## 1 high vs none   0.14619836  0.08426464 0.20813207          0.03159941
+## 2  low vs none   0.03201124 -0.01857035 0.08259284          0.02580741
+## 3  high vs low   0.11418711  0.05608106 0.17229316          0.02964649</code></pre>
 </div>
 </div>
 
